--- a/static/templates/page_two.html
+++ b/static/templates/page_two.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="row spacer">
+    <div class="row spacer viewonly">
         <div class="col-md-6">
             <% if (complete) { %>
                 <div class="alert alert-success">
@@ -174,7 +174,7 @@
             </div>
         </div>
     </div>
-    <div class="row spacer">
+    <div class="row spacer viewonly">
         <div class="col-md-12 text-center">
             <% if (!complete) { %>
                 <button id="offer-advice" class="btn btn-primary">Submit</button>
