--- a/static/css/careerplan.css
+++ b/static/css/careerplan.css
@@ -103,3 +103,27 @@ a.btn.btn-default {
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/* map view */
+#map-layers-modal .modal-dialog {
+    width: 900px;
+    font-size: .9em;
+}
+
+.map-layers {
+    height: 350px;
+    position: relative;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.map-layer {
+    width: 600px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
