--- a/static/templates/page_two.html
+++ b/static/templates/page_two.html
@@ -17,11 +17,6 @@
         <div class="col-md-6">
             <h4>2. Offer Advice</h4>
         </div>
-        <div class="col-md-offset-3 col-md-3">
-            <a href="#" class="btn btn-default pull-right" data-toggle="modal" data-target="#map-layers-modal">
-                <span class="glyphicon glyphicon-picture"></span> Map View
-            </a>
-        </div>
     </div>
 
     <div class="row spacer viewonly">
@@ -38,8 +33,12 @@
                 </div>
             <% } %>
         </div>
+        <div class="col-md-6">
+            <a href="#" class="btn btn-primary pull-right" data-toggle="modal" data-target="#map-layers-modal">
+                <span class="glyphicon glyphicon-picture"></span> North Oralington Map
+            </a>
+        </div>
     </div>
-
     <div class="row spacer">
         <div class="col-md-12">
             <div class="actor-advice">
