--- a/static/templates/page_one.html
+++ b/static/templates/page_one.html
@@ -1,55 +1,39 @@
-<div class="page-1 spacer">
-    <div class="modal fade" id="strategy-modal" tabindex="-1" role="dialog" aria-labelledby="Strategy">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Dental Career Planning</h4>
-         </div>
-          <div class="modal-body"></div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <h4>1. Location Considerations</h4>
+<div class="page-1">
+    <div class="row info-header">
+        <div class="col-xs-12">
+            <h3>Step 1. Location Considerations</h3>
         </div>
     </div>
 
-    <div class="row spacer viewonly">
-        <div class="col-md-6">
+    <div class="row row-nopadding hidden-print">
+        <div class="col-xs-12 row-nopadding">
             <% if (complete) { %>
-                <div class="alert alert-success">
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                    <b>Great work!</b> Click Step 2 to continue.
+                <div class="success_instructions well left alert-success">
+                    <b>Great work!</b> Click <b>Step 2</b> to continue.
                 </div>
             <% } else { %>
-                <div class="alert alert-info">
-                    <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                <div class="basic_instructions well left alert-info">
                     Identify the primary factors to consider when selecting a dental location.
                 </div>
             <% } %>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-7">
+    <div class="row row-nopadding">
+        <div class="col-xs-7 row-nopadding">
             <h4><%= actor.intro_title %></h4>
             <p><%= actor.intro_text %></p>
             <h4>Factors to consider</h4>
-            <p>Before looking at the map, think about some of the factors that might play a significant role in this decision.</p>
-            <p>Identify the top 3 factors from the lists below</p>
+            <p>Before looking at the map, think about some of the factors that might play a significant role in <% if (actor.reflect) { %>your own<% } else { %><%= actor.display_name %>'s<% } %> decision.</p>
+            <p>Choose what you think the top 3 factors should be from the lists below.</p>
         </div>
-        <div class="col-md-5">
+        <div class="col-xs-5 row-nopadding">
             <div class="actor-image actor-image-<%=actor.id%>"></div>
         </div>
     </div>
 
-    <div class="row spacer">
-        <div class="col-md-12">
+    <div class="row row-nopadding">
+        <div class="col-xs-12 row-nopadding">
             <form>
             <div class="cases">
                 <div class="casetitle">Question 1</div>
@@ -129,8 +113,8 @@
             </form>
         </div>
     </div>
-    <div class="row spacer">
-        <div class="col-md-12 text-center">
+    <div class="row row-nopadding hidden-print">
+        <div class="col-xs-12 text-center">
             <% if (!complete) { %>
                 <button id="identify-factors" class="btn btn-primary">Submit</button>
             <% } %>
