Add "Next" behavior
The interactive can include a "Next" link that signals to the embedding environment that the user is ready to continue. To turn on this behavior, add a ```next=1``` parameter to the url. For example:

--- a/static/css/careerplan.css
+++ b/static/css/careerplan.css
@@ -58,6 +58,12 @@ a.btn.btn-default {
     min-height: 56px;
 }
 
+.success_instructions span.nextpage {
+    color: #468847;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .visualclear {
     clear: both;
 }
